<resources>

    //AndroidManifest label
    <string name="app_name">Cliq</string>
    <string name="cliq">https://cliqstudent.000webhostapp.com/cliq</string>
    <string name="groupchat">Gruppenchats</string>
    <string name="change_avatar">Avatar wählen</string>
    <string name="chooseAvatar">Wähle einen Avatar</string>
    <string name="registration">Registrierung</string>
    <string name="register">Registrieren</string>
    <string name="change_background">Hintergrund wählen</string>
    <string name="group_settings">Gruppeneinstellungen</string>
    <string name="group_information">Gruppeninformationen</string>
    <string name="chooseGroupImg">Wähle ein Gruppenbild</string>

    //activity_sign_up
    <string name="email">E-Mail</string>
    <string name="repeat_pw">Passwort wiederholen</string>
    <string name="studentAccount">Schüler-Account</string>
    <string name="teacherAccount">Lehrer-Account</string>
    <string name="join_now">Jetzt registrieren</string>
    <string name="sign_up_question">Noch nicht registriert? Klicke hier</string>
    <string name="signTime">Datum und Uhrzeit der Registrierung:</string>
    <string name="account">Schüler/Vereinsmitglied</string>
    <string name="adminAccount">Administrator</string>
    <string name="presenterAccount">Moderator</string>

    //activity_user_list
    <string name="search">Suche</string>

    //activity_main
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="login">Login</string>
    <string name="sign_up">Registrieren</string>

    //activity_profile
    <string name="save">speichern</string>
    <string name="yourStatus">Dein Status</string>
    <string name="status">Schreibe etwas...</string>
    <string name="emoji">Emoji</string>

    //activity_profile_settings
    <string name="profileSettings">Profil-Einstellungen</string>

    //activity_chat
    <string name="message">Nachricht schreiben...</string>
    <string name="send">senden</string>
    <string name="photo">Foto</string>
    <string name="documents">Dokumente</string>
    <string name="audio">Audio</string>
    <string name="camera">Kamera</string>
    <string name="delete_message">Nachricht löschen</string>
    <string name="startAudio">Start</string>
    <string name="stopAudio">Stop</string>
    <string name="playAudio">Abspielen</string>
    <string name="imgEdit">Foto bearbeiten</string>
    <string name="recordAudio">Sprachnachricht aufnehmen</string>

    //activity_group_chat_view
    <string name="groupname">Gruppenname</string>
    <string name="groupList">Deine Gruppen</string>

    //menu_navigation
    <string name="profile">Profil</string>
    <string name="groups">Gruppen</string>
    <string name="contacts">Kontakte</string>

    //activity_group_chat
    <string name="delete_switch">Nachrichten löschen</string>
    <string name="profanity_filter">Schimpfwortfilter</string>
    <string name="participantlist">Teilnehmerliste</string>
    <string name="add_group_member">Teilnehmer hinzufügen</string>
    <string name="group_members">Gruppenmitglieder</string>
    <string name="previousActivity">vorherige Activity</string>
    <string name="change_group_pic">Gruppenbild ändern</string>
    <string name="activate_filter">Filter aktivieren</string>

    //activity_consent_form
    <string name="accept">Akzeptieren</string>
    <string name="cancel">Abbrechen</string>

    //menu_profile_settings und menu_admin_profile_settings
    <string name="settings">Einstellungen</string>
    <string name="design">Design ändern</string>
    <string name="avatar">Avatar auswählen</string>
    <string name="background">Hintergrund auswählen</string>
    <string name="information">Informationen bearbeiten</string>
    <string name="change_email">E-Mail Adresse ändern</string>
    <string name="change_password">Passwort ändern</string>
    <string name="see_consent">Einverständniserklärung einsehen</string>
    <string name="logout">Ausloggen</string>

    //activity_consent_form
    <string name="consent">Einverständniserklärung</string>

    //activity_pop_up_translator
    <string name="translator">Deutsch-Übersetzer</string>
    <string name="translation">Übersetzung</string>
    <string name="translate">übersetzen</string>
    <string name="translateTest">Zu übersetzenden Text eingeben...</string>
    <string name="ok">OK</string>

    //activity_camera
    <string name="take_photo">Foto aufnehmen</string>
    <string name="record_video">Video aufnehmen</string>
    <string name="cropImage">Foto zuschneiden</string>
    <string name="bwFilter">Schwarz-Weiß Filter</string>
    <string name="open_gallery">Galerie öffnen</string>

    //menu_group_chat
    <string name="view_group">Gruppeninformationen</string>
    <string name="back_to_profile_settings">Zurück zu Profil-Einstellungen</string>
    <string name="back">Zurück</string>
    <string name="white">Weiß</string>
    <string name="orange">Orange</string>
    <string name="blue">Blau</string>
    <string name="green">Grün</string>
    <string name="yellow">Gelb</string>

    //menu_profile_settings
    <string name="newMember">neues Gruppenmitglied</string>

    //menu_user_list
    <string name="createGroup">Gruppe erstellen</string>

</resources>
