<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person_white_24dp"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item
        android:id="@+id/set_audio"
        android:title="@string/audio"
        app:showAsAction="never" />

      //  android:id="@+id/set_camera"
      //  android:title="@string/camera"
      //  app:showAsAction="never" />

    <item
        android:id="@+id/set_viewgroup"
        android:title="@string/view_group"
        app:showAsAction="never"/>

    <item
        android:id="@+id/set_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/set_logout"
        android:title="@string/logout"
        app:showAsAction="never"/>



</menu>