<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/chat_message_delete"
        android:title="@string/delete_message" />

    <item
        android:id="@+id/photo"
        android:title="@string/photo"
        android:icon="@drawable/ic_photo_black_24dp"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/documents"
        android:title="@string/documents"
        android:icon="@drawable/ic_documents_black_24dp"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/audio"
        android:title="@string/audio"
        android:icon="@drawable/ic_keyboard_voice_black_24dp"
        android:orderInCategory="3"/>

</menu>