<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/attach_file_background">

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/groupSettings"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_below="@+id/profile_linearLayout"
            android:layout_marginTop="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_settings"
                android:textSize="18dp"
                android:paddingTop="15dp"/>

            <Switch
                android:id="@+id/delete_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="60dp"
                android:textSize="13sp"
                android:text="@string/delete_switch" />

            <Switch
                android:id="@+id/filter_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:textSize="13sp"
                android:text="@string/profanity_filter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/groupSettings">

            <Button
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@color/colorOrange"/>

            <Button
                android:id="@+id/btnSave"
                android:text="@string/accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="80dp"
                android:background="@color/colorOrange" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>