<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/buttonTakePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorOrange"
                android:layout_marginLeft="8dp"
                android:text="@string/take_photo" />

            <Button
                android:id="@+id/buttonRecordVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorOrange"
                android:layout_marginLeft="8dp"
                android:text="@string/record_video" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btnSendRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorOrange"
                    android:text="@string/send" />

            </LinearLayout>

    </LinearLayout>

</LinearLayout>