<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="com.example.cliqv1.TranslatorActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/translatorToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarNew"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/translator"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <EditText
        android:id="@+id/eingabeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/translatorToolbar"
        android:layout_marginTop="130dp"
        android:inputType="textPersonName"
        android:hint="@string/translateTest"
        android:gravity="center"/>

    <Button
        android:id="@+id/button_uebersetzen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eingabeEditText"
        android:layout_centerHorizontal="true"
        android:text="@string/translate"
        android:background="@drawable/oval"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_marginTop="20dp"
        android:onClick="getTranslation"/>

    <TextView
        android:id="@+id/translation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/translation"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_uebersetzen"
        android:background="@drawable/border"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/translation"-->
    <!--android:text="Powered by Yandex.Translate"-->
    <!--android:textSize="25sp"-->
    <!--android:textColor="#317933"-->
    <!--android:textStyle="bold"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:layout_centerHorizontal="true"/>-->



</RelativeLayout>
