<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@drawable/pop_up_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/consentform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/consent_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/consent"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/consentText"
                android:layout_width="300dp"
                android:layout_height="700dp"
                android:text="TextView"
                android:layout_below="@+id/consent_form"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/consentText"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/oval"
                    android:text="@string/cancel" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="right">

                    <Button
                        android:id="@+id/btnAccept"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/oval"
                        android:text="@string/accept" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>